Get part of the way on setting up get threads
