# src/thread/thread.controller.ts
@@ -1,13 +1,26 @@
-import { Controller, Req, Post, UseGuards, Body } from '@nestjs/common';
+import {
+  Controller,
+  Req,
+  Post,
+  UseGuards,
+  Body,
+  Get,
+  Query
+} from '@nestjs/common';
 import { User } from '@prisma/client';
 import { GetUser } from '../auth/decorator';
 import { JwtGuard } from '../auth/guard';
 import { ThreadService } from './thread.service';
-import { ThreadBodyDto } from './thread_dto';
+import { GetThreadsQueryDto, ThreadBodyDto } from './thread_dto';
 
 @Controller('threads')
 export class ThreadController {
   constructor(private threadService: ThreadService) {}
+
+  @Get()
+  getThreads(@Query() query: GetThreadsQueryDto) {
+    return this.threadService.getThreads(query.startIndex);
+  }
 
   @UseGuards(JwtGuard)
   @Post()
