# src/thread/thread_dto/thread-request.dto.ts
@@ -1,0 +1,18 @@
+import { IsNotEmpty, IsString } from 'class-validator';
+
+class ThreadBodyDto {
+  @IsString()
+  @IsNotEmpty()
+  title: string;
+
+  @IsString()
+  @IsNotEmpty()
+  description: string;
+}
+
+class GetThreadsQueryDto {
+  @IsString()
+  startIndex: number;
+}
+
+export { ThreadBodyDto, GetThreadsQueryDto };
